src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_input_border_no_hint_enabled.snap
---
source: src/app/app_render_tests/popup_tests.rs
assertion_line: 247
expression: output
---
"╭ Object ───────────────────────────────────────────────────────── L1-4/4 (0%) ╮"
"│{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "age": 30                                                                   │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                 ╭ fn: select ──────────────────────────────────────────────╮ │"
"│                 │                                                          │ │"
"│                 │ Filter elements that match a condition                   │ │"
"│                 │                                                          │ │"
"│                 │   select(.age > 18)                       │ numeric filt │ │"
"│                 │   select(.status == "active")             │ exact match  │ │"
"│                 │   select(.tags | contains(["important"])) │ array check  │ │"
"│                 │   select(.name | test("^test"; "i"))      │ regex match  │ │"
"│                 │                                                          │ │"
"│                 │ 💡 For null-safe checks, use select(.field? // false)    │ │" Hidden by multi-width symbols: [(21, " ")]
"│                 │                                                          │ │"
"╰─────────────────╰───────────────────── Ctrl+I Dismiss ─────────────────────╯─╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                              │"
"╰l+T Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R Hist╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy R"
