src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_input_both_hints_when_tooltip_available.snap
---
source: src/app/app_render_tests/popup_tests.rs
expression: output
---
"╭ Object ───────────────────────────────────────────────────────── L1-4/4 (0%) ╮"
"│{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "age": 30                                                                   │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Query [INSERT] ──────────────────────── Ctrl+T Tooltip • Ctrl+A AI Assistant ╮"
"│                                                                              │"
"╰t+Tab Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R Hi╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy R"
