src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_input_no_hints_when_ai_visible.snap
---
source: src/app/app_render_tests/popup_tests.rs
expression: output
---
"╭ Object ───────────────────────────────────────────────────────── L1-4/4 (0%) ╮"
"│{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "age": 30                                                                   │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                      ╭ Not Configured ────────────────────  ╮│"
"│                                      │                                      ││"
"│                                      │ ⚙ AI provider not configured         ││"
"│                                      │                                      ││"
"│                                      │ To enable AI assistance, configure a ││"
"│                                      │ provider                             ││"
"│                                      │                                      ││"
"╰──────────────────────────────────────╰──────────── Ctrl+A Close ────────────╯╯"
"╭ Query [INSERT] ──────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"╰t+Tab Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R Hi╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy R"
