src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_input_only_ai_hint_when_tooltip_active.snap
---
source: src/app/app_render_tests/popup_tests.rs
assertion_line: 381
expression: output
---
"╭ Object ───────────────────────────────────────────────────────── L1-4/4 (0%) ╮"
"│{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "age": 30                                                                   │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                 ╭ fn: select ──────────────────────────────────────────────╮ │"
"│                 │                                                          │ │"
"│                 │ Filter elements that match a condition                   │ │"
"│                 │                                                          │ │"
"│                 │   select(.age > 18)                       │ numeric filt │ │"
"│                 │   select(.status == "active")             │ exact match  │ │"
"│                 │   select(.tags | contains(["important"])) │ array check  │ │"
"│                 │   select(.name | test("^test"; "i"))      │ regex match  │ │"
"│                 │                                                          │ │"
"│                 │ 💡 For null-safe checks, use select(.field? // false)    │ │" Hidden by multi-width symbols: [(21, " ")]
"│                 │                                                          │ │"
"╰─────────────────╰───────────────────── Ctrl+T Dismiss ─────────────────────╯─╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                              │"
"╰t+Tab Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R Hi╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+Q Output"
