src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_tooltip_dismiss_hint.snap
---
source: src/app/app_render_tests/popup_tests.rs
assertion_line: 199
expression: output
---
"╭ Object ───────────────────────────────────────────────────────────────────────────────────────────────── L1-4/4 (0%) ╮"
"│{                                                                                                                     │"
"│  "name": "Alice",                                                                                                    │"
"│  "age": 30                                                                                                           │"
"│}                                                                                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                            ╭ fn: sort_by ──────────────────────────────────────────╮ │"
"│                                                            │                                                       │ │"
"│                                                            │ Sort array elements by a computed value               │ │"
"│                                                            │                                                       │ │"
"│                                                            │   sort_by(.name)             │ sort by field          │ │"
"│                                                            │   sort_by(.date) | reverse   │ sort descending        │ │"
"│                                                            │   sort_by(-.price)           │ descending (cleaner)   │ │"
"│                                                            │   sort_by(.price | tonumber) │ ensure numeric         │ │"
"│                                                            │                                                       │ │"
"│                                                            │ 💡 Use sort_by(-.field) instead of sort_by(.field) |  │ │" Hidden by multi-width symbols: [(64, " ")]
"│                                                            │    reverse                                            │ │"
"│                                                            │                                                       │ │"
"╰────────────────────────────────────────────────────────────╰─────────────────── Ctrl+T Dismiss ────────────────────╯─╯"
"╭ Query [INSERT] ───────────────────────────────────────────────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                                                                      │"
"╰────────────── Shift+Tab Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R History ───────────────╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+Q Output Query • Ctrl+C Quit                    "
