src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_tooltip_operator_alternative.snap
---
source: src/app/app_render_tests/popup_tests.rs
assertion_line: 211
expression: output
---
"╭ Object ──────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│{                                                                                                                     │"
"│  "name": "Alice",                                                                                                    │"
"│  "age": 30                                                                                                           │"
"│}                                                                                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                             ╭ operator: // ────────────────────────────────────────────────────────╮ │"
"│                                             │                                                                      │ │"
"│                                             │ Alternative operator - returns right side if left is null or false   │ │"
"│                                             │                                                                      │ │"
"│                                             │   .name // "anonymous" │ default for null/missing                    │ │"
"│                                             │   .count // 0          │ default number                              │ │"
"│                                             │   .config // {}        │ default empty object                        │ │"
"│                                             │   (.x // .y) // .z     │ chain alternatives                          │ │"
"│                                             │                                                                      │ │"
"│                                             │ 💡 Only triggers on null/false - use 'if . == "" then ... end' for   │ │" Hidden by multi-width symbols: [(49, " ")]
"│                                             │    empty strings                                                     │ │"
"│                                             │                                                                      │ │"
"╰─────────────────────────────────────────────╰─────────────────────────── Ctrl+T Dismiss ───────────────────────────╯ ╯"
"╭ Query [INSERT] ───────────────────────────────────────────────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                                                                      │"
"╰────────────── Shift+Tab Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R History ───────────────╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+Q Output Query • Ctrl+C Quit                    "
