src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_tooltip_operator_update.snap
---
source: src/app/app_render_tests/popup_tests.rs
expression: output
---
"╭ Object ──────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│{                                                                                                                     │"
"│  "name": "Alice",                                                                                                    │"
"│  "age": 30                                                                                                           │"
"│}                                                                                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                    ╭ operator: |= ─────────────────────────────────────────────────╮ │"
"│                                                    │                                                               │ │"
"│                                                    │ Update operator - transform value in place using expression   │ │"
"│                                                    │                                                               │ │"
"│                                                    │   .name |= ascii_upcase   │ uppercase the name field          │ │"
"│                                                    │   .count |= . + 1         │ increment count                   │ │"
"│                                                    │   .items[] |= . * 2       │ double each item                  │ │"
"│                                                    │   .config |= . + {new: 1} │ add to object                     │ │"
"│                                                    │                                                               │ │"
"│                                                    │ 💡 Right side receives current value as input; use = for      │ │" Hidden by multi-width symbols: [(56, " ")]
"│                                                    │    simple assignment                                          │ │"
"│                                                    │                                                               │ │"
"╰────────────────────────────────────────────────────╰─────────────────────── Ctrl+T Dismiss ────────────────────────╯ ╯"
"╭ Query [INSERT] ───────────────────────────────────────────────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                                                                      │"
"╰────────────── Shift+Tab Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R History ───────────────╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy Result • Ctrl+W Save • Ctrl+Q Output Quer"
