src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_tooltip_popup_positioning.snap
---
source: src/app/app_render_tests/popup_tests.rs
assertion_line: 186
expression: output
---
"╭ Object ───────────────────────────────────────────────────────────────────────────────────────────────── L1-4/4 (0%) ╮"
"│{                                                                                                                     │"
"│  "name": "Alice",                                                                                                    │"
"│  "age": 30                                                                                                           │"
"│}                                                                                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                               ╭ fn: map ───────────────────────────────────────────╮ │"
"│                                                               │                                                    │ │"
"│                                                               │ Apply expression to each element of an array       │ │"
"│                                                               │                                                    │ │"
"│                                                               │   map(.name)           │ extract field from each   │ │"
"│                                                               │   map(. + 1)           │ increment each number     │ │"
"│                                                               │   map(select(.active)) │ filter to active items    │ │"
"│                                                               │   map({id, name})      │ reshape each object       │ │"
"│                                                               │                                                    │ │"
"│                                                               │ 💡 Use [.[] | expr] for same result - less memory  │ │" Hidden by multi-width symbols: [(67, " ")]
"│                                                               │    for large arrays                                │ │"
"│                                                               │                                                    │ │"
"╰───────────────────────────────────────────────────────────────╰────────────────── Ctrl+I Dismiss ──────────────────╯─╯"
"╭ Query [INSERT] ───────────────────────────────────────────────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                                                                      │"
"╰──────────────── Ctrl+T Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R History ────────────────╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy Result • Ctrl+W Save • Ctrl+Q Output Quer"
